samples/_failures_safe/1761499582_2f31e7_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_40b7b1bb.c: In function ‘main’:
./samples/SAFE/__tmp_40b7b1bb.c:134:12: error: missing terminating " character
  134 |     printf("2:
      |            ^~~
./samples/SAFE/__tmp_40b7b1bb.c:134:5: error: expected expression at end of input
  134 |     printf("2:
      |     ^~~~~~
./samples/SAFE/__tmp_40b7b1bb.c:134:5: error: expected declaration or statement at end of input
